--- a/Navigation-Drawer/app/src/main/res/layout/activity_firebase_authentication.xml
+++ b/Navigation-Drawer/app/src/main/res/layout/activity_firebase_authentication.xml
@@ -1,15 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/livestream"
-    android:background="@color/darkgray"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Livestream.Livestream">
-
-    <WebView
-        android:id="@+id/webview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    tools:context=".FirebaseAuthentication">
 
 </RelativeLayout>
