--- a/Navigation-Drawer/app/src/main/res/layout/activity_firebase_video_list.xml
+++ b/Navigation-Drawer/app/src/main/res/layout/activity_firebase_video_list.xml
@@ -5,14 +5,52 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    tools:context=".ListVideos">
+    tools:context=".ViewVideos.ListVideos">
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <ImageButton
+            android:id="@+id/refreshButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_refresh_black_24dp"
+            android:background="@null"
+            android:paddingTop="12dp"
+            android:paddingLeft="10dp"
+            android:visibility="visible" />
+
+        <LinearLayout
+            android:layout_width="278dp"
+            android:layout_height="match_parent" />
+
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/switchButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingStart="315dp"
+            android:paddingEnd="0dp"
+            android:thumb="@drawable/custom_thumb"
+            app:showText="true"
+            app:track="@drawable/custom_track" />
+    </LinearLayout>
+
 
     <ListView
         android:id="@+id/videoList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="47dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="0dp" />
 
 </RelativeLayout>
