--- a/Navigation-Drawer/app/src/main/res/layout/adapter_firebase_date_list_layout.xml
+++ b/Navigation-Drawer/app/src/main/res/layout/adapter_firebase_date_list_layout.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:weightSum="100">
+    android:weightSum="100"
+    android:id="@+id/listViewRow">
+
 
     <TextView
         android:id="@+id/textView1"
