--- a/Navigation-Drawer/app/src/main/res/layout/adapter_firebase_video_list_layout.xml
+++ b/Navigation-Drawer/app/src/main/res/layout/adapter_firebase_video_list_layout.xml
@@ -2,38 +2,67 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:weightSum="100">
 
-    <TextView
-        android:id="@+id/videoTextView"
-        android:gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_weight="66.6"
-        android:text="TextView1"
-        android:textAlignment="center" />
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="33.3">
+        android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/videoTextView2"
+            android:id="@+id/videoTextView"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:text="TextView2" />
+            android:layout_height="60dp"
+            android:layout_weight="66.6"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="TextView1"
+            android:textAlignment="center" />
 
-        <TextView
-            android:id="@+id/videoTextView3"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:text="TextView3" />
+            android:layout_height="wrap_content"
+            android:layout_weight="33.3"
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/videoTextView2"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:text="TextView2" />
+
+
+            <TextView
+                android:id="@+id/videoTextView3"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:text="TextView3" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/deleteButton"
+                    android:layout_width="122dp"
+                    android:layout_height="37dp"
+                    android:text="Delete"
+                    android:visibility="gone" />
+
+                <Button
+                    android:id="@+id/downloadButton"
+                    android:layout_width="122dp"
+                    android:layout_height="37dp"
+                    android:text="Download"
+                    android:visibility="gone" />
+            </LinearLayout>
+
+
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
