--- a/Navigation-Drawer/app/src/main/res/layout/activity_firebase_video_list.xml
+++ b/Navigation-Drawer/app/src/main/res/layout/activity_firebase_video_list.xml
@@ -11,7 +11,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:id="@+id/topHeader_videoList">
 
         <ImageButton
             android:id="@+id/refreshButton"
