--- a/Navigation-Drawer/app/src/main/res/layout/activity_firebase_date_list.xml
+++ b/Navigation-Drawer/app/src/main/res/layout/activity_firebase_date_list.xml
@@ -6,30 +6,50 @@
     android:orientation="horizontal"
     tools:context=".ViewFolders.ListVideoDates">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbarDate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryDark"
+        android:elevation="4dp"
+        android:gravity="end"
+        android:orientation="horizontal"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <LinearLayout
+            android:id="@+id/buttonLayouts"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:paddingStart="310dp"
+            android:paddingBottom="15dp">
+
+            <ImageButton
+                android:id="@+id/refreshButtonDates"
+                android:layout_width="30dp"
+                android:layout_height="match_parent"
+                android:background="@null"
+                android:paddingTop="12dp"
+                android:src="@drawable/ic_refresh_black_24dp"
+                android:visibility="visible" />
+        </LinearLayout>
+    </androidx.appcompat.widget.Toolbar>
+
     <LinearLayout
+        android:id="@+id/topHeader_dateList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:id="@+id/topHeader_dateList">
-
-        <ImageButton
-            android:id="@+id/refreshButtonDates"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@null"
-            android:paddingLeft="10dp"
-            android:paddingTop="12dp"
-            android:src="@drawable/ic_refresh_black_24dp"
-            android:visibility="visible" />
-    </LinearLayout>
-
-    <ListView
-        android:id="@+id/videoDateList"
-        android:layout_width="match_parent"
-        android:layout_height="556dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="47dp" />
+        android:orientation="vertical">
+
+        <ListView
+            android:id="@+id/videoDateList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="47dp"
+            android:paddingTop="10dp" />
+    </LinearLayout>
 
 </RelativeLayout>
