--- a/Navigation-Drawer/app/src/main/res/layout/activity_firebase_streaming.xml
+++ b/Navigation-Drawer/app/src/main/res/layout/activity_firebase_streaming.xml
@@ -9,6 +9,6 @@
     <com.google.android.exoplayer2.ui.PlayerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/playerview"
+        android:id="@+id/playeriew"
         />
 </RelativeLayout>
