--- a/Navigation-Drawer/app/src/main/res/layout/activity_livestream.xml
+++ b/Navigation-Drawer/app/src/main/res/layout/activity_livestream.xml
@@ -1,15 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/livestream"
-    android:background="@color/darkgray"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/livestream"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/darkGray"
     tools:context=".Livestream.Livestream">
 
     <WebView
         android:id="@+id/webview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
+
+    <LinearLayout
+        android:id="@+id/moveServo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="invisible">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="140dp"
+            android:layout_marginTop="420dp"
+            android:gravity="center"
+            android:text="Raspberry Pi Address"
+            android:textSize="15sp"
+            android:visibility="gone" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:visibility="gone">
+
+            <EditText
+                android:id="@+id/ipAddress"
+                android:layout_width="217dp"
+                android:layout_height="75dp"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="192.168.192.235"
+                android:textSize="25sp"
+                tools:layout_editor_absoluteX="38dp"
+                tools:layout_editor_absoluteY="211dp" />
+
+            <EditText
+                android:id="@+id/portNumber"
+                android:layout_width="90dp"
+                android:layout_height="73dp"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="21567"
+                android:textSize="25sp"
+                tools:layout_editor_absoluteX="279dp"
+                tools:layout_editor_absoluteY="210dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnDown"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:text="Left"
+                tools:layout_editor_absoluteX="222dp"
+                tools:layout_editor_absoluteY="324dp" />
+
+            <Button
+                android:id="@+id/btnUp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:text="Right"
+                tools:layout_editor_absoluteX="103dp"
+                tools:layout_editor_absoluteY="324dp" />
+        </LinearLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
