--- a/Navigation-Drawer/app/src/main/res/layout/activity_main.xml
+++ b/Navigation-Drawer/app/src/main/res/layout/activity_main.xml
@@ -6,29 +6,23 @@
     android:id="@+id/drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-
-    >
-
+    tools:context=".MainActivity">
 
     <LinearLayout
-        android:background="@drawable/points"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-
+        android:layout_height="match_parent"
+        android:background="@drawable/points" />
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
-        app:headerLayout="@layout/header"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:background="@color/white"
-        app:itemTextColor="@color/darkgray"
-        app:itemIconTint="@color/darkgray"
-        app:menu="@menu/drawermenu"
         android:layout_gravity="start"
-        >
+        android:background="@color/white"
+        app:headerLayout="@layout/header"
+        app:itemIconTint="@color/darkGray"
+        app:itemTextColor="@color/darkGray"
+        app:menu="@menu/drawermenu">
         <!-- ultima ascunde tot drawerul-->
     </com.google.android.material.navigation.NavigationView>
 </androidx.drawerlayout.widget.DrawerLayout>
