--- a/Navigation-Drawer/app/src/main/res/layout/header.xml
+++ b/Navigation-Drawer/app/src/main/res/layout/header.xml
@@ -1,29 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="160dp"
-    android:background="@drawable/headerr"
+    android:background="@drawable/header"
+    android:orientation="vertical"
     android:padding="20dp"
-    >
+    android:id="@+id/header_id">
 
-    <ImageView
-        android:src="@drawable/face"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-    />
+    <!--    <ImageView-->
+    <!--        android:src="@drawable/face"-->
+    <!--        android:layout_width="75dp"-->
+    <!--        android:layout_height="75dp"-->
+    <!--    />-->
     <TextView
+        android:id="@+id/username_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sarrah Eren"
-        android:textColor="@color/white"
-        android:textStyle="bold"
         android:layout_marginTop="5dp"
-        />
+        android:textColor="@color/white"
+        android:textStyle="bold" />
+
     <TextView
+        android:id="@+id/email_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SarrahEren@gmail.com"
-        android:textColor="@color/white"
-        />
+        android:textColor="@color/white" />
 </LinearLayout>
