--- a/Navigation-Drawer/app/src/main/res/values/colors.xml
+++ b/Navigation-Drawer/app/src/main/res/values/colors.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#795548</color>
-    <color name="colorPrimaryDark">#5D4037</color>
+    <color name="colorPrimary">#0080ff</color>
+    <color name="colorPrimaryDark">#2663ac</color>
+
     <color name="white">#FFFFFF</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="darkgray">#6C6C6C</color>
+    <color name="darkGray">#6C6C6C</color>
 
+    <color name="lightGray">#d3d3d3</color>
 
     <color name="material_green_50">#E8F5E9</color>
     <color name="material_green_500">#4CAF50</color>
