--- a/Navigation-Drawer/app/src/main/res/values/styles.xml
+++ b/Navigation-Drawer/app/src/main/res/values/styles.xml
@@ -1,10 +1,8 @@
 <resources>
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">@color/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">@color/colorPrimary</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
@@ -19,15 +17,25 @@
 
     <!-- Firebase Authentication -->
     <style name="FirebaseAuthentication" parent="AppTheme">
-<!--        <item name="android:windowBackground">@android:color/white</item>-->
         <item name="colorPrimary">@color/material_green_500</item>
-        <item name="colorPrimaryDark">@color/material_green_700</item>
+        <item name="colorPrimaryDark">@color/colorPrimary</item>
         <item name="colorAccent">@color/material_purple_a700</item>
 
         <item name="colorControlNormal">@color/material_green_500</item>
         <item name="colorControlActivated">@color/material_lime_a700</item>
         <item name="colorControlHighlight">@color/material_green_a200</item>
-        <item name="android:windowBackground">@color/material_green_50</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowBackground">@mipmap/desk</item>
+    </style>
+
+    <style name="myButtonTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="colorButtonNormal">#5552f1 </item>
+    </style>
+
+    <style name="myButtonTheme1" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="colorButtonNormal">@color/colorPrimary</item>
     </style>
 
 </resources>
